--- a/Networking/build.gradle
+++ b/Networking/build.gradle
@@ -17,6 +17,10 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
     implementation 'org.apache.logging.log4j:log4j-api:2.24.3'
     runtimeOnly group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+
+    implementation 'com.google.protobuf:protobuf-java:4.30.2'
+
+
 }
 
 test {
